[package]
name = "shellshop"
version = "0.1.0"
description = "A terminal based shopping TUI that runs over SSH and allow payments via Lightning Network"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
crossterm = "0.29.0"
ratatui = "0.30.0"
russh = { version = "0.58", features = ["ring"] }
tokio = { version = "1", features = ["full"] }

# Optimization for release builds
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
